<resources>
    <string name="app_name">E-KIPI</string>
    <string name="riwayat">Riwayat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="sub_district">Sub-District</string>
    <string name="address">Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>

    <string name="error_empty">%s is empty</string>
    <string name="error_invalid">%s is invalid</string>
    <string name="error_confirm_password_wrong">The password and confirm password is not the same</string>
    <string name="error_date">%1$s is not in date format %2$s</string>

    <string name="data_diri">Data Diri</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="my_profile_desc">Data Diri, Nomor Handphone, dan lain-lain</string>
    <string name="my_komorbid">My Komorbid</string>
    <string name="my_komorbid_desc">Daftar penyakit bawaan dan lain-lain</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_desc">Keluar dari akun</string>
    <string name="comorbid_prompt">Adakah Penyakit bawaan yang anda idap selama ini?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="health_check">Health Check</string>
    <string name="logout">Logout</string>
    <string name="daily_form">Daily Form</string>
    <string name="daily_checkup">Daily Checkup</string>
    <string name="skip">Lewati</string>
    <string name="daily_form_question_1">Pilih gejala yang kamu alami hari ini</string>
    <string name="daily_form_question_2">Deskripsikan apa yang kamu rasakan</string>
    <string name="laki_laki">laki-laki</string>
    <string name="perempuan">perempuan</string>
    <string name="history">Riwayat</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="card_icon">Card Icon</string>
    <string name="placeholder">......</string>
    <string name="tambah_kipi">Tambah KIPI</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="oke">oke</string>
    <string-array name="comorbid_symptoms">
        <item>Hipertensi</item>
        <item>Diabetes melitus</item>
        <item>Gagal jantung</item>
        <item>Jantung koroner</item>
        <item>Penyakit paru obstruktif knonis</item>
        <item>Asma</item>
        <item>Penyakit hati</item>
        <item>TBC</item>
        <item>Penyakit autoimun (lupus/Sjogren/vaskulitis)</item>
        <item>Kanker</item>
        <item>HIV</item>
        <item>Alergi obat</item>
        <item>Penyalit kelainan darah</item>
        <item>Hipertiroid/hipotiroid</item>
        <item>Penyakit ginjal</item>
        <item>Dermatitis atopi</item>
        <item>Reaksi anafilaksis (bukan akibat vaksinasi covid)</item>
        <item>Urtikaria</item>
        <item>Alergi makanan</item>
        <item>Interstitial lung disease</item>
    </string-array>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera and storage permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <!-- camera prediction -->
    <string name="deteksi_wajah">Deteksi Wajah</string>
    <string name="selected_image">Selected Image</string>
    <string name="select">Select</string>
    <string name="predict">Predict</string>
    <string name="prediction_result">Prediction Result</string>
    <string name="mood_predict_result">Hasil prediksi: %s</string>
    <string name="question1">Mengapa anda merasa %s hari ini?</string>
</resources>
