<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.healthtroops.ekipi.ui.home.HomeFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_daily_form_history"
        android:name="com.bangkit.healthtroops.ekipi.ui.dailyform.DailyFormHistoryFragment"
        android:label="@string/daily_form"
        tools:layout="@layout/fragment_daily_form_history" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkit.healthtroops.ekipi.ui.profile.ProfileFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/profile_fragment">
        <action
            android:id="@+id/action_navigation_profile_to_profileEditActivity"
            app:destination="@id/profileEditActivity" />
        <action
            android:id="@+id/action_navigation_profile_to_signUpComorbidFragment2"
            app:destination="@id/signUpComorbidFragment2" />
    </fragment>
    <activity
        android:id="@+id/profileEditActivity"
        android:name="com.bangkit.healthtroops.ekipi.ui.profileedit.ProfileEditActivity"
        android:label="ProfileEditActivity" />
    <fragment
        android:id="@+id/signUpComorbidFragment2"
        android:name="com.bangkit.healthtroops.ekipi.ui.comorbid.SignUpComorbidFragment"
        android:label="fragment_sign_up_comorbid"
        tools:layout="@layout/fragment_sign_up_comorbid" />
</navigation>
